[package]
name = "zerossl"
description = "ZeroSSL Rust Client"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.87" }
openssl = { version = "0.10.42" }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }